# soccer-analyzer

./: .firebaserc  .gitignore  IMPLEMENTATION_SUMMARY_SECTION_5.2.2.md  IMPLEMENTATION_SUMMARY_SECTION_6.1.1.md  PHASE_2_2_CHECKLIST.md  PHASE_2_2_WINDOWED_DETECTION_SUMMARY.md  PHASE_5_3_SUMMARY.md  PIPELINE_ANALYSIS_REPORT.md  QUICK_SUMMARY.md  README.md  STATS_RECALCULATION_FEATURE.md  STATS_RECALCULATION_TEST.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_REPORT.md  TEST_COVERAGE_SUMMARY.md  TIMESTAMP_DURATION_MISMATCH_REPORT.md  TIMESTAMP_MISMATCH_DIAGRAM.txt  check-all-matches-passes.mjs  check-db.mjs  check-match-data.mjs  check-match-dates.mjs  check-match-passes.mjs  check-passes-detail.mjs  check-stats-source.mjs  cloudbuild.yaml  firebase.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  temp-check-passes.mjs
.claude/: settings.local.json
.serena/: project.yml
data/: cipher-sessions.db-shm  cipher-sessions.db-wal
docs/: VIDEO_SPLIT_UPLOAD.md  api_contracts.md  backend_runbook.md  implementation_failures.yaml  soccer-analyzer_implementation-plan_frontend-backend.md  soccer-analyzer_monorepo-implementation-plan.md
functions/: check-db-simple.js  package-lock.json  package.json  tsconfig.json
infra/: .gitignore  .npmrc  DEPLOYMENT.md  README.md  TEST_EXECUTION_GUIDE.md  TEST_SUMMARY.md  cloud-run-service.yaml  deploy-analyzer.sh  firebase.rules  firestore.indexes.json  package.json  storage.rules  test-setup.ts  tsconfig.json  verify-deployment-config.sh  vitest.config.ts
scripts/: create-test-match.js  test-pipeline.ts
services/ml-inference/: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  Dockerfile.cpu  README.md  USAGE_GUIDE.md  cloudbuild.yaml  pyproject.toml  requirements-cpu.txt  requirements.txt
services/ml-inference/app/: __init__.py  config.py  main.py
services/ml-inference/scripts/: setup_mac.sh
services/ml-inference/src/: __init__.py  api.py  detector.py  pipeline.py  test_example.py  tracker.py
x-pending/: Untitled  (+14 more)
(+277 files in other folders)
